--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="error_no_internet">Couldn\'t connect to server, please check your internet connection</string>
     <string name="error_unknown">Something went wrong try again later\n</string>
     <string name="error_serialization">Coudn\'t serialize data\n</string>
+    <string name="market_cap">Market Cup</string>
+    <string name="price">Price\n\n</string>
+    <string name="change_last_24h">Change last 24h\n</string>
 </resources>
